--- a/projects/sike/style.css
+++ b/projects/sike/style.css
@@ -24,6 +24,19 @@ body {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 }
 
+.thank-you-page {
+  position: relative;
+  z-index: 1;
+  max-width: 80%;
+  margin: 5%;
+  padding: 2.5% 5% 2.5% 5%;
+  background-color: rgba(255, 255, 255, 0.8);
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  display: none;
+  visibility: hidden;
+}
+
 .menu-sections-container {
     display: flex;
     justify-content: space-between;
@@ -61,6 +74,9 @@ button:hover {
  
 @media (max-width: 1200px) {
     .menu-container {
+        margin: 4%;
+      }
+    .thank-you-page {
         margin: 4%;
       }
     body {
