--- a/projects/sike/style.css
+++ b/projects/sike/style.css
@@ -9,8 +9,6 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background-repeat: no-repeat;
-  background-size: 100% 100%;
 }
 
 .menu-container {
@@ -66,6 +64,16 @@ button {
 button:hover {
   background-color: #5d4037;
 }
+
+input[type="number"] {
+  font-size: 0.7em;
+  font-family: 'Mynerve', cursive;  
+}
+
+select {
+  font-size: 0.7em;
+  font-family: 'Mynerve', cursive;  
+}
  
 @media (max-width: 1200px) {
     .menu-container {
@@ -91,5 +99,11 @@ button:hover {
     }
     .background {
       background-size: cover;
+    }
+    input[type="number"] {
+      font-size: 0.85em;
+    }
+    select {
+      font-size: 0.85em;
     }
 }
