--- a/projects/digits/style.css
+++ b/projects/digits/style.css
@@ -1,57 +1,81 @@
-.grid{
+* {
+    font-family: sans-serif;
+}
+
+.header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    font-size: 1.6rem;
+}
+
+.grid {
+    margin: 0;
     cursor: pointer;
     user-select: none;
-    padding: 15px;
+    padding: 16px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
-.row{
+
+.row {
     margin: 0;
     padding: 0;
     display: flex;
 }
-.cell{
+
+.cell {
     border: 1px solid black;
-    width: calc(min(100vw, 100vh) / 40);
-    height: calc(min(100vw, 100vh) / 40);
+    width: calc(min(100vw, 100vh) / 80);
+    height: calc(min(100vw, 100vh) / 80);
     display: inline-block;
     margin: 0;
     padding: 0;
+    border-radius: 4px;
+
 }
-.cell.active{
+
+.cell.active {
     background-color: #000;
 }
-.cell:hover{
+
+.cell:hover {
     background-color: #ccc;
 }
-.cell.active:hover{
+
+.cell.active:hover {
     background-color: #222;
 }
 
 /* controls */
 
-.controls{
+.controls {
     display: flex;
     justify-content: center;
+    margin-top: 32px;
 }
-.controls > div{
-    margin: 10px;
+
+.controls>div {
+    margin: 0px 16px;
     border: 1px solid black;
-    padding: 5px 15px;
-    border-radius: 15px;
+    padding: 8px 16px;
+    border-radius: 8px;
     cursor: pointer;
 }
-.controls > div:hover{
+
+.controls>div:hover {
     background-color: #ccc;
 }
-.controls > div.active{
+
+.controls>div.active {
     background-color: #000;
     color: #fff;
 }
 
-#clear:hover{
+#clear:hover {
     /* material red */
     background-color: #f44336;
     color: #fff;
@@ -59,18 +83,37 @@
 
 /* output */
 
-.output{
+.output {
     display: flex;
     justify-content: center;
+    margin-top: 32px;
 }
-.output > span{
-    font-family: sans-serif;
+
+.output>span {
     font-size: 2rem;
 }
 
-.output > .prediction{
-    padding: 0 20px;
-    margin: 0 5px;
-    border-radius: 18px;
+.output>.prediction {
+    padding: 0 16px;
+    margin: 0 16px;
     border: 1px solid black;
+    border-radius: 8px;
+}
+
+.bar {
+    display: inline-block;
+    margin: 0 0px;
+    width: 32px;
+    background-color: green;
+    border-radius: 4px 4px 0 0px;
+}
+
+.bigbar {
+    display: inline-block;
+    margin: 0 4px;
+    width: 32px;
+}
+
+.histogram-container {
+    display: inline;
 }
